# py-paper-wallet

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/util/: html.py  password.py  qr_code.py  wallet_file.py  wallet_html.py
src/web3/: wallet.py
tests/web3/: test_wallet_create.py
